2008-11-5  Felix Wolfsteller <felix.wolfstelller@intevation.de>

	Work on Change Request #17 (http://www.openvas.org/openvas-cr-17.html - 
	"OTP: Make NVT signatures available to OpenVAS-Client").
	Replaced sending of dummy certificate key oids by "real" fingerprints.
	Sends dummy certificate information.

	* openvasd/nasl_plugins.c (nasl_plugin_add): Replaced the dummy string 
	for certificate fingerprints by real value from store / certificate 
	file, corrected behaviour for missing signature files.

	* openvasd/otp_1_0.c: Added gpgme dependency and a dummy strings for 
	the cerrtificate sending.

	* openvasd/comm.d (send_plug_info): increased size of buffer to send pl.


2008-11-04  Michael Wiegand <michael.wiegand@intevation.de>

	* configure.in: Updated version requirements for -libraries and
	-libnasl.

2008-10-31  Felix Wolfsteller <felix.wolfstelller@intevation.de>

	Steps to an implementation of Change Request #17 
	(http://www.openvas.org/openvas-cr-17.html - "Make NVT signatures 
	available to OpenVAS-Client").
	Uses the new field "sign_key_ids" of plugin-structures and the .desc 
	store. Until soon, just a dummy- string will be used and eventually
	transmitted by the server.

	IMPORTANT: Breaks compatibility and renders old server .desc- cache 
	files useless. You will need an openvas-libraries revision >= 1654 in 
	order to compile and a client of revision >= 1654 in order to work with 
	the server. There might be problems with transmitting OVAL plugins to 
	the client.

	* openvasd/nasl_plugins.c (nasl_plugin_add) : Set a dummy key_ids-
	string, improved readability (a bit).

	* openvasd/pluginload.c: Typo in comment fixed.

	* openvasd/oval_plugins.c: Stated a FIXME and removed unreachable NULL
	return.

	* openvasd/otp_1_0.h: Added CREQ_CERTIFICATES symbol.

	* openvasd/otp_1_0.c (otp_1_0_get_client_request,
	otp_1_0_server_send_certificates): Added CREQ_CERTIFICATES parsing and 
	a method stub to send the certificates.
